syntax = "proto3";
package guard_pb;

import "rtrs_expinfo.proto";

// *************************** begin ******************************
//Begin---------场景定义
//目的: 用于识别不同的场景
enum SCENE_CMD_ID {
    UNKNOWN = 0;
    SCENE_CMD_ID_INFORMATION_FLOW = 1;      //信息流--周群
    SCENE_CMD_ID_DOWNLOAD_RECOM = 2;      //下载后推荐--克浩
    SCENE_CMD_ID_APPSTORE_SEARCH_ASSOCIATE = 3;      //应用商店联想--克浩
    SCENE_CMD_ID_APPSTORE_SEARCH_CPD_LIST = 4;      //应用商店搜索列表--克浩
    SCENE_CMD_ID_BROWSER_SEARCH = 5;      //浏览器搜索--克浩
    SCENE_CMD_ID_APPSTORE_DOWNLOAD_BEROFE_AFTER = 6;      //商店下载前后  --曾志
    SCENE_CMD_ID_APPSTORE_HOME_RECOMM = 12;      //应用商店首页推荐  --陈春梅
    SCENE_CMD_ID_THEME_ENTRANCE_RECOMMEND = 19;      // 主题字体首入页推荐--兰佛军
    SCENE_CMD_ID_GAMECENTER_CONTENT_DETAIL_RECOMM = 28;      //内销游戏中心游戏内容详情页推荐--李建辉

    SCENE_CMD_ID_ITHEME_THEME_LIST_PAGE_RECOMM = 50;      // i主题主题列表页推荐--兰佛军
    SCENE_CMD_ID_ITHEME_FONT_LIST_PAGE_RECOMM = 51;      // i主题字体列表页推荐--兰佛军
    SCENE_CMD_ID_ITHEME_THEME_COLUMN_RECOMM = 52;      // i主题推荐页主题栏推荐--兰佛军
    SCENE_CMD_ID_SYSTEM_SETTING_THEME_RECOMM = 53;      // 系统设置主题推荐页推荐--兰佛军
    SCENE_CMD_ID_ITHEME_DETAIL_PAGE_DOWNLOAD_AFTER = 54;      // 主题详情页下载后--兰佛军
    SCENE_CMD_ID_ITHEME_FONT_COLUMN_RECOMM = 55;      // 主题推荐页字体栏--兰佛军
    SCENE_CMD_ID_ITHEME_SEARCH_NO_RESULT = 56;      // 主题搜索无结果页--兰佛军
    SCENE_CMD_ID_MINUS_ONE_THEME_RECOMM = 57;      // 负一屏主题卡片推荐--兰佛军
    SCENE_CMD_ID_ITHEME_THEME_COLUMN_MORE_RECOMM = 58;      // 推荐页更多主题--兰佛军
    SCENE_CMD_ID_ITHEME_WALLPAPER_LIST_PAGE_RECOMM = 59;      // 壁纸列表页场景--兰佛军
    SCENE_CMD_ID_ITHEME_UNLOCK_LIST_PAGE_RECOMM = 60;    // 锁屏列表--兰佛军
    SCENE_CMD_ID_ITHEME_UNLOCK_COLUMN_RECOMM = 61;    // 推荐页锁屏栏--兰佛军

    SCENE_CMD_ID_APPSTORE_SEARCH_RECOMM_LIST = 102;      //搜索推荐页
    SCENE_CMD_ID_APPSTORE_RECOMM_DOWNLOAD = 104;      //内销商店推荐用下载管理--黄斐铨
    SCENE_CMD_ID_APPSTORE_CPD_DOWNLOAD = 105;      //内销商店CPD用下载管理--黄斐铨
    SCENE_CMD_ID_APPSTORE_LIST_GAME_SEARCH = 106;      //内销列表游戏搜索--黄斐铨
    SCENE_CMD_ID_APPSTORE_ASSOCIATE_GAME_SEARCH = 107;      //内销联想词游戏搜索--黄斐铨
    SCENE_CMD_ID_APPSTORE_SEARCH_BROADCAST_WORD = 108;      //内销商店搜索轮播词--陈浩南
    SCENE_CMD_ID_APPSTORE_APP_SEARCH_HOT_WORD = 109;      //内销商店应用搜索热词--陈浩南
    SCENE_CMD_ID_APPSTORE_GAME_SEARCH_HOT_WORD = 110;      //内销商店游戏搜索热词--陈浩南
    SCENE_CMD_ID_APPSTORE_DETAIL_BEFOR_DOWNLOAD = 111;      //内销商店详情页下载前--陈浩南
    SCENE_CMD_ID_APPSTORE_DETAIL_AFTER_DOWNLOAD = 112;      //内销商店详情页下载后--陈浩南
    SCENE_CMD_ID_APPSTORE_FULL_SCENE = 113;      //内销商店全场景--陈浩南
    SCENE_CMD_ID_APPSTORE_CPD_AFTER_DOWNLOAD = 114;      //内销CPD下载后--曾志
    SCENE_CMD_ID_APPSTORE_CPD_LIST_GAME_SEARCH = 115;          //内销CPD列表游戏搜索--郭鑫鹏
    SCENE_CMD_ID_APPSTORE_CPD_ASSOCIATE_GAME_SEARCH = 116;     //内销CPD联想词游戏搜索--郭鑫鹏
    SCENE_CMD_ID_APPSTORE_SEARCH_LIST_CPD_SEARCH = 117;      //内销列表CPD搜索--郑世卓
    SCENE_CMD_ID_APPSTORE_DOWNLOAD_AFTER = 118;      //搜索、首页、详情页、更新页下载后   -- 肖明睿

    SCENE_CMD_ID_IMUSIC_PLAYLIST_CHANGE = 301;    //i音乐歌单推荐换一批--陈奕奕
    SCENE_CMD_ID_IMUSIC_PLAYLIST_RECOMM = 302;   // i音乐热门歌单推荐--陈奕奕
    SCENE_CMD_ID_IMUSIC_EVERYSONG_RECOMM = 303;  //i音乐每日歌曲推荐--陈奕奕
    SCENE_CMD_ID_IMUSIC_FMFIRST_RECOMM = 304;   //有声读物热门推荐一级页面--陈奕奕
    SCENE_CMD_ID_IMUSIC_FMSECOND_RECOMM = 305;  //有声读物热门推荐二级页面--陈奕奕
    SCENE_CMD_ID_IMUSIC_FMONLINE_RECOMM = 306;  //有声读物热门推荐在线专辑推荐--陈奕奕

    SCENE_CMD_ID_GAMECENTER_LIST_SEARCH = 351;      //内销游戏中心列表搜索--黄斐铨
    SCENE_CMD_ID_GAMECENTER_ASSOCIATE_SEARCH = 352;      //内销游戏中心联想词搜索--黄斐铨
    SCENE_CMD_ID_GAMECENTER_FORUM_HOME_RECOMM = 353;      //内销游戏中心游戏论坛首页推荐--李建辉
    SCENE_CMD_ID_GAMECENTER_CPD_LIST_SEARCH = 354;        //内销游戏中心列表搜索--郭鑫鹏
    SCENE_CMD_ID_GAMECENTER_CPD_ASSOCIATE_SEARCH = 355;   //内销游戏中心联想词搜索--郭鑫鹏
    SCENE_CMD_ID_GAMECENTER_CTR_PREDICT = 356;      //游戏CTR --郭鑫鹏

    SCENE_CMD_ID_LOCKSCREEN_JOYPICTURE_RECOMM = 400; //内销悦图锁屏--马连洋 

    SCENE_CMD_ID_QUICK_APP_SEARCH_PAGE_SEARCH = 410;  //快应用搜索页搜索
    SCENE_CMD_ID_QUICK_APP_SECOND_LIST_RECOMM = 411;  //快应用推荐页二级列表推荐
    SCENE_CMD_ID_QUICK_APP_HOMEPAGE_RECOMM = 412;     //快应用首页推荐

    SCENE_CMD_ID_ALLIANCE_AD_CPC = 450;            //联盟广告cpc -- 周群
    SCENE_CMD_ID_AD_ALLIANCE_CPD = 451;            //广告联盟CPD -- 肖明睿

    SCENE_CMD_ID_FOREIGN_APPSTORE_RECOMM_DETAIL_LIST = 501;      //外销商店详情页  --邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_RECOMM_UPDATE_LIST = 502;      //外销商店更新页  --邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_RECOMM_DOWNLOAD_MANAGER = 503;      //外销商店下载管理页  --邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_RECOMM_INSTALL_RECOMM = 504;      //外销商店安装推荐  --邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_CLASSIFY_LIST = 505;   // 外销商店分类榜单--邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_NEW_LIST = 506;  //外销商店new榜单--邹宇
    SCENE_CMD_ID_FOREIGN_APPSTORE_SPECIAL_PAGE = 507;  //外销商店个性化页面--邹宇

}
//End---------场景定义


//Begin---------实验平台
//目的：支持多层实验平台，通过配置化方式实现多组实验统计
//message AlgMultiTestInfo {
  //  int32 testID = 1;                                    
    //int32 ruleID = 2;   
   // map<string, string> mapParams = 3;  //算法参数
//};
//End---------实验平台

message PredictorInfo {
    string platform = 1; 
    string modelName = 2;    
    double powerRatio = 3;               
};

//场景算法信息 
message SceneSubAlgInfo {
    repeated string rankAlgs = 1; 
    repeated string recallAlgs = 2;                                    
    repeated PredictorInfo predictors = 3;   
};

//Begin---------用户相关
//设备相关信息
//目的：用于个性化推荐
message DeviceInfo{
    string androidId = 1;  
    string imei = 2;  
    int64  superUser = 3;                                 //jail break/root
    string language = 4;                                 //语言
    string manufacturer = 5;                                  //手机厂商 htc, LG, ...
    string modelName = 6;                                  //手机型号 Nexus 5, ...
    string osVersion = 7;                                  //安卓版本号 4.4.1
    string resolution = 8;                                  //400x800, 400*600
    string macAddr = 9;                                  //34:34:f3:...
    string clientVersion = 10;                                //客户端版本号 TMA_411_DEV/040411&NA/040411&2.3.4_10_1&20_15_14&samsung_GTS5570&NA&NA&V3
    int64 addAttribute = 11;                             //设备附加属性
    repeated int32 preferInfos = 12;                     //偏好列表
};

//位置相关信息
//目的：LBS相关推荐
message LocationInfo{
    string city = 1;                                          //城市
    string longitude = 2;                                    //经纬度
    string timezone = 3;                                     //时区
};

//网络相关信息
//目的：网络相关过滤
message NetworkInfo{
    string imsi = 1;                                           //sim卡号
    string networkType = 2;                                   //wifi, 2g, 3g...
    string networkOperator = 3;                               //运营商
    string phoneNumber = 4;                                   //手机号
    string clientIp = 5;                                      //客户端用户的ip
    string wifiSsid = 6;                                       //wifi名(Vivo-Freewifi)
    string wifiBssid = 7;                                      //wifi路由器的mac地址
};
//End---------用户相关


//Item相关
message AdItemInfo{
    string traceId = 1;                                       // 广告用于跟踪计费的traceid
    string adTxt = 2;                                         // 广告语
    int32 adType = 3;                                          // 广告类型：1、普通网址 2、应用下载
    int32 startTime = 4;                                        // 广告开始时间
    int32 endTime = 5;                                         //广告结束时间
    double price = 6;                                        // 广告的价格
    int32 costType = 7;                                       // 区分广告的计费类型，如是否cpt
    map<string,string> ideaMap = 8;                          // 广告创意信息
    string currentIdea = 9;                                //当前创意
    int32 pricingType = 10; //计费类型: 1、表示cpc；2、表示 ocpc; 3、表示cpd；4、表示 ocpd;
};


//单个推荐信息，是server返回，也可以把这些应用交给server打分
message RecommendItem{
    int64 id = 1;//appid
    double score = 2;  
    string recomReason = 3;                                  //推荐理由
    int32 versionCode = 4;                                     //应用的versionCode
    AdItemInfo adInfo = 5;
    double cvr = 6;
    string traceId = 7;
    string strId = 8;
};


//Begin---------App定向投放相关
//年龄、收入等区间
message Interval{
    double lowerLimit = 1;                                    //下限
    double upperLimit = 2;                                    //上限
};
//年龄性别参数
message AgeSexInfo{
    bool isIncludeAge = 1;                            //是否使用年龄字段
    repeated Interval ageInterval = 2;                         //年龄区间
    bool isIncludeSex = 3;                            //是否使用性别字段
    int32 sex = 4;                                              //1男2女0全部
};
//收入和地域参数
message IncomeCityInfo{
    bool isIncludeIncome = 1;                         //是否使用收入字段
    repeated Interval incomeInterval = 2;                      //收入区间
    bool isIncludeCity = 3;                           //是否使用地域城市字段
    repeated uint32 vecCityId = 4;                       //地域城市范围                        
};
//每个app的定向信息
message RuleAppDirectInfo{
    map<uint32, double> mapTagInfo = 1;              //tag集合
    double exposePercent = 2;                                //曝光比
    repeated uint32 vecInstallAppIdKai = 3;              //已安装app列表
    repeated uint32 vecUnInstallAppIdKai = 4;        //未安装app列表
    AgeSexInfo ageSexInfo = 5 ;      //年龄、性别信息
    IncomeCityInfo incomeCityInfo = 6 ;      //收入、地域信息
};
//End---------App定向投放相关

//推荐信息
message RecommendInfo{
    SCENE_CMD_ID sceneId = 1;                          //场景定义
    string sceneSubAlg = 2;                      //目前流量还是通过二部来划分，用来标识一个场景下的子流量
    string context = 3;                         //上下文信息，比如搜索的精准搜索匹配结果
    int32 platformVersion = 4;                //平台版本号：比如应用商店、浏览器、游戏中心
    repeated RecommendItem vecItem = 5;         //用于使用推荐给出的顺序
    map<int64, RecommendItem> mapItem = 6;       //用于使用appid做key，返回数据信息，与vecItem不同时存在
    string traceId = 7;
    int32 totalResult = 8;                                      //总条数，推荐侧返回的可展示的item总数
    int32 indexBegin = 9;                                       //请求起始条数，从0开始
    int32 indexEnd = 10;                                         //请求结束位置
    string query = 11;                                                //查询词
    map<string, string> mapContext = 12;                         //上下文信息，比如搜索的精准搜索匹配结果
    int64 positionId = 13;                                        // 广告位ID(int64)
    double valueModifyParamA = 14;  // pctr*（a+bid^t）*factor 中的参数a
    double valueModifyParamT = 15;  // pctr*（a+bid^t）*factor 中的参数t
    double valueModifyParamFactor = 16;  // pctr*（a+bid^t）*factor 中的参数factor
    SceneSubAlgInfo subAlgInfo = 17;
    string sceneInfo = 18;                     //场景说明以及子场景的标注
    string positionIdStr = 19;                                        // 广告位ID(string)
};

//Begin---------------接口
//请求参数
message RecomRequest{
    DeviceInfo device = 1;
    LocationInfo location = 2;
    NetworkInfo network = 3;
    RecommendInfo recommend = 4;
    repeated AlgMultiTestInfo vecTestInfo = 5;                //多层abtest信息, 在请求access的时候已经确定好
    string reqId = 6;
    int32 timeout = 7; //请求超时时间，单位ms
    string appKey = 8;
    bool need_debug = 9;     //是否需要debug，目前只有白名单看板需要
};

//推荐结果
message RecomResponse{
    int32 ret = 1;
    string retStr = 2;
    RecommendInfo recomInfo = 3;
    map<string,string> debug_info = 4;   //多层服务的debug内容，每层对应map的一项
};
//End---------------接口